Fix a overflow bug in the console widget (#452)

--- a/src/web/widgets/Console/index.styl
+++ b/src/web/widgets/Console/index.styl
@@ -20,6 +20,8 @@
 
 .terminal-container {
     background: #000;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .icon {
